--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,9 @@ main {
   .card__img, .card__info {
     max-width: 500px;
   }
+  .card__title {
+    font-size: 2em;
+  }
 }
 
 @media screen and (min-width: 968px) {
@@ -137,7 +140,7 @@ main {
   }
   .card__title {
     margin-bottom: 0.8em;
-    font-size: 2em;
+    font-size: 2.2em;
     line-height: 1.2;
     letter-spacing: 1px;
   }
@@ -158,6 +161,9 @@ main {
   .card__stat-title {
     font-size: 0.6875em;
     letter-spacing: 2px;
+  }
+  .card__stat-num {
+    font-size: 1.5em;
   }
 }
 /*# sourceMappingURL=style.css.map */
