--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ main {
 .card__img {
   max-width: 350px;
   mix-blend-mode: multiply;
+  display: block;
 }
 
 .card__overlay {
@@ -112,7 +113,7 @@ main {
   margin-bottom: 0.3rem;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 668px) {
   .card__img, .card__info {
     max-width: 500px;
   }
@@ -121,7 +122,7 @@ main {
   }
 }
 
-@media screen and (min-width: 968px) {
+@media screen and (min-width: 1080px) {
   .card {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: reverse;
@@ -130,8 +131,11 @@ main {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -webkit-column-gap: 1rem;
-            column-gap: 1rem;
+    -webkit-column-gap: 0.5rem;
+            column-gap: 0.5rem;
+  }
+  .card__img, .card__info {
+    max-width: 500px;
   }
   .card__info {
     text-align: initial;
@@ -140,12 +144,11 @@ main {
   }
   .card__title {
     margin-bottom: 0.8em;
-    font-size: 2.2em;
+    font-size: 2.3em;
     line-height: 1.2;
-    letter-spacing: 1px;
   }
   .card__desc {
-    font-size: 0.8125em;
+    font-size: 0.85em;
     width: 90%;
     line-height: 1.7;
   }
@@ -160,7 +163,7 @@ main {
   }
   .card__stat-title {
     font-size: 0.6875em;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
   }
   .card__stat-num {
     font-size: 1.5em;
